samples/_failures_safe/1761559684_6da017_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_068a28b3.c: In function ‘main’:
./samples/SAFE/__tmp_068a28b3.c:133:5: error: expected ‘{’ at end of input
  133 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_068a28b3.c:133:5: error: expected declaration or statement at end of input
